# conf-data-processing-architecture-reference

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  maven_install.json
build_defs/: release.bzl  scp_dependencies.bzl
build_defs/cc/: sdk.bzl  sdk_common.bzl  sdk_static_lib.bzl  sysroot_ext.bzl  toolchains_llvm.bzl
build_defs/cc/aws/: aws_c_auth.BUILD  aws_c_cal.BUILD  aws_c_common_source_code.BUILD  aws_c_common_static_lib.BUILD  aws_c_compression.BUILD  aws_c_event_stream.BUILD  aws_c_http.BUILD  aws_c_io.BUILD  aws_c_sdkutils.BUILD  aws_checksums.BUILD  aws_nitro_enclaves_sdk_source_code.BUILD  aws_nitro_enclaves_sdk_static_lib.BUILD  aws_sdk_cpp_source_code.BUILD  aws_sdk_cpp_source_code_deps.bzl  aws_sdk_cpp_static_lib.BUILD  extensions.bzl
build_defs/cc/shared/: bazel_rules_cpp.bzl  bazelisk.bzl  cc_utils.bzl  curl.bzl  extensions.bzl  farmhash.BUILD  farmhash.bzl  google_cloud_cpp.bzl  grpc_cpp.bzl  grpc_cpp.patch  protobuf_javascript.bzl
build_defs/cc/shared/build_targets/: curl.BUILD  googleapis.BUILD  libjemalloc.BUILD  libxml2.BUILD  madler_zlib.BUILD  nghttp2.BUILD  rapidjson.BUILD
build_defs/java/: maven_dependencies.bzl  rules_jvm_external.bzl
build_defs/shared/: absl.bzl  bazel_aspect_build.bzl  bazel_build_tools.bzl  bazel_docker_rules.bzl  bazel_docker_rules.patch  bazel_rules_distroless.bzl  bazel_rules_java.bzl  bazel_rules_oci.bzl  bazel_rules_pkg.bzl  bazel_rules_proto.bzl  bazel_rules_python.bzl  cmd_args.bzl  golang.bzl  java_grpc.bzl  opentelemetry.bzl  protobuf.bzl  protobuf.patch  terraform.bzl
build_defs/tink/: tink_defs.bzl
cc/: BUILD  CPPLINT.cfg
cc/core/async_executor/mock/: BUILD  mock_async_executor.h
cc/core/async_executor/src/: BUILD  async_executor.cc  async_executor_stats_collector.cc
cc/core/async_executor/src/aws/: BUILD
cc/core/async_executor/test/: BUILD  single_thread_priority_async_executor_test.cc
cc/core/authorization_proxy/mock/: BUILD
cc/core/authorization_proxy/src/: BUILD  authorization_proxy.cc  authorization_proxy.h  authorization_proxy_base.cc  authorization_proxy_base.h
cc/core/authorization_proxy/test/: BUILD  authorization_proxy_base_test.cc  authorization_proxy_test.cc
cc/core/common/proto/: BUILD
cc/core/config_provider/mock/: BUILD
cc/core/config_provider/src/: BUILD
cc/core/config_provider/test/: BUILD  config_provider_test.cc
cc/core/curl_client/mock/: BUILD
cc/core/curl_client/src/: BUILD  error_codes.h  http1_curl_client.cc  http1_curl_handlers.cc  http1_curl_handlers.h  http1_curl_wrapper.cc
cc/core/curl_client/test/: BUILD  http1_curl_client_test.cc  http1_curl_handlers_test.cc  http1_curl_wrapper_test.cc
cc/core/http2_client/mock/: BUILD
cc/core/http2_client/src/: BUILD  error_codes.h  http2_client.h  http_connection.cc  http_connection.h  http_connection_pool.cc
cc/core/http2_client/test/: BUILD  http2_client_test.cc  http2_connection_test.cc
cc/core/http2_forwarder/mock/: BUILD
cc/core/http2_server/mock/: BUILD
cc/core/http2_server/src/: BUILD  http2_server.cc  http2_server.h
cc/core/http2_server/test/: BUILD  http2_server_load_test.cc  http2_server_test.cc
cc/core/interface/: BUILD  http_request_router_interface.h  network_service_interface.h  type_def.h
cc/core/lease_manager/src/: BUILD
cc/core/logger/interface/: BUILD
cc/core/logger/mock/: BUILD
cc/core/logger/src/: BUILD
cc/core/logger/test/: BUILD
cc/core/message_router/src/: BUILD
cc/core/message_router/test/: BUILD
cc/core/network/src/: BUILD
cc/core/network/test/: BUILD
cc/core/nosql_database_provider/mock/: BUILD
cc/core/os/src/: BUILD
cc/core/test/: BUILD
cc/core/test/utils/: BUILD  proto_test_utils.h  scp_test_base.h
cc/core/utils/src/: BUILD  base64.cc  base64.h  hashing.cc
cc/core/utils/test/: BUILD
cc/cpio/client_providers/interface/: BUILD  auth_token_provider_interface.h  cpio_provider_interface.h  kms_client_provider_interface.h  otel_metric_client_provider_interface.h  private_key_client_provider_interface.h  private_key_fetcher_provider_interface.h  queue_client_provider_interface.h  role_credentials_provider_interface.h
cc/cpio/common/src/: BUILD
cc/cpio/common/test/: BUILD
cc/cpio/proto/: BUILD  instance_database_client.proto
cc/cpio/server/interface/: BUILD
cc/cpio/server/src/: BUILD
cc/process_launcher/: BUILD
cc/process_launcher/argument_parser/src/: BUILD
cc/process_launcher/argument_parser/test/: BUILD
cc/process_launcher/daemonizer/src/: BUILD
cc/process_launcher/daemonizer/test/: BUILD
cc/proxy/: BUILD
cc/proxy/src/: BUILD
cc/proxy/test/: BUILD
cc/public/core/async_executor/: BUILD  async_executor_factory_test.cc
cc/public/core/interface/: BUILD  execution_result.h  execution_result.proto
cc/public/core/src/: execution_result.cc
cc/public/core/test/: BUILD  errors_test.cc  execution_result_macros_test.cc  execution_result_test.cc
cc/public/cpio/examples/: BUILD  blob_storage_client_test.cc  crypto_client_test.cc  instance_client_test.cc  kms_client_test.cc  local_instance_client_test.cc  local_metric_client_test.cc  local_parameter_client_test.cc  local_private_key_client_test.cc  metric_client_test.cc  parameter_client_test.cc  private_key_client_test.cc  public_key_client_test.cc
cc/public/cpio/interface/: BUILD  error_codes.h  type_def.h
cc/public/cpio/utils/: BUILD  proto_utils.cc  proto_utils.h  proto_utils_test.cc
coordinator/keygeneration/gcp/: build_defs.bzl
docs/: TrustedExecutionEnvironmentsCodeSamples.md
java/com/google/scp/: BUILD
javatests/com/google/kms/: BUILD  LocalGcpKmsClient.java  LocalKmsConstants.java  LocalKmsServerContainer.java
operator/simulation/proto/: BUILD
operator/terraform/gcp/: BUILD
operator/terraform/gcp/applications/: BUILD
operator/terraform/gcp/modules/: BUILD
operator/terraform/gcp/util_scripts/: build_and_push_container_images.sh
testing/build_defs/: avro.bzl
tools/tftesting/: BUILD  run_terraform_tests.sh  setup_tf_testing.sh  tf_test.bzl  tf_test_helpers.sh  tf_test_template.tftest.hcl  variables_parsing.sh
(+1454 files in other folders)
